--- a/app/views/offer_mailer/offers_email.html.erb
+++ b/app/views/offer_mailer/offers_email.html.erb
@@ -31,7 +31,7 @@
         <th><%= pin.invoice_date %></th>
         <th><%= pin.due_date %></th>
         <th><%= pin.invoice_curr %></th>
-        <th><%= pin.invoice_amount %></th>
+        <th><%= pin.gross_invoice_amount %></th>
         <th><%= pin.prop_settlement_date %></th>
         <th><%= pin.offer_amount %></th>
       </tr>
