--- a/app/views/pins/pendingoffers.html.erb
+++ b/app/views/pins/pendingoffers.html.erb
@@ -13,11 +13,11 @@
     <tr>
       <th><%= sortable "suppler_name", "Supplier Name" %></th>
       <th><%= sortable "invoice_number", "Invoice Number" %></th>
-      <th><%= sortable "description", "Description" %></th>
+      <th><%= sortable "description", "Fat Face Ref" %></th>
       <th><%= sortable "invoice_date", "Invoice Date" %></th>
       <th><%= sortable "due_date", "Due Date" %></th>
       <!-- <th><%#= sortable "invoice_curr", "Invoice Currency" %></th> -->
-      <th><%= sortable "invoice_amount", "Invoice Amount" %></th>
+      <th><%= sortable "gross_invoice_amount", "Gross Invoice Amount" %></th>
       <th><%= sortable "status", "Offer Status" %></th>
       <th><%= sortable "supplier_email", "Offer Sent to" %></th>
       <th><%= sortable "offer_sent_date", "Offer Sent Date" %></th>
@@ -37,7 +37,7 @@
         <th class="middle date"><%= date(pin.invoice_date) %></th>
         <th class="middle date"><%= date(pin.due_date) %></th>
         <!-- <th class="middle"><%#= pin.invoice_curr %></th> -->
-        <th class="right" ><%= currency(pin.invoice_amount) %></th>
+        <th class="right" ><%= currency(pin.gross_invoice_amount) %></th>
         <th class="middle"><%= pin.status %></th>
         <th class="middle"><%= pin.supplier_email %></th>
         <th class="middle date"><%= date(pin.offer_sent_date) %></th>
