--- a/app/views/pins/acceptedoffersadmin.html.erb
+++ b/app/views/pins/acceptedoffersadmin.html.erb
@@ -16,11 +16,11 @@
       <!-- <th><%#= sortable "suppler_ref", "Supplier Ref" %></th> -->
       <th><%= sortable "suppler_name", "Supplier Name" %></th>
       <th><%= sortable "invoice_number", "Invoice Number" %></th>
-      <th><%= sortable "description", "Description" %></th>
+      <th><%= sortable "description", "Fat Face Ref" %></th>
       <th><%= sortable "invoice_date", "Invoice Date" %></th>
       <th><%= sortable "due_date", "Due Date" %></th>
       <!-- <th><%#= sortable "invoice_curr", "Invoice Currency" %></th> -->
-      <th><%= sortable "invoice_amount", "Invoice Amount" %></th>
+      <th><%= sortable "gross_invoice_amount", "Gross Invoice Amount" %></th>
       <th><%= sortable "supplier_email", "Offer Sent to" %></th>
       <th><%= sortable "status", "Offer Status" %></th>
       <th><%= sortable "offer_sent_date", "Offer Sent Date" %></th>
@@ -41,7 +41,7 @@
         <th class="middle thin"><%= date(pin.invoice_date) %></th>
         <th class="middle thin"><%= date(pin.due_date) %></th>
         <!-- <th class="middle"><%#= pin.invoice_curr %></th> -->
-        <th class="right currency2"><%= currency(pin.invoice_amount) %></th>
+        <th class="right currency2"><%= currency(pin.gross_invoice_amount) %></th>
         <th class="left"><%= pin.supplier_email %></th>
         <th class="middle thiner"><%= pin.status %></th>
         <th class="middle thin"><%= date(pin.offer_sent_date) %></th>
@@ -67,11 +67,11 @@
       <!-- <th><%#= sortable "suppler_ref", "Supplier Ref" %></th> -->
       <th><%= sortable "suppler_name", "Supplier Name" %></th>
       <th><%= sortable "invoice_number", "Invoice Number" %></th>
-      <th><%= sortable "description", "Description" %></th>
+      <th><%= sortable "description", "Fat Face Ref" %></th>
       <th><%= sortable "invoice_date", "Invoice Date" %></th>
       <th><%= sortable "due_date", "Due Date" %></th>
       <!-- <th><%#= sortable "invoice_curr", "Invoice Currency" %></th> -->
-      <th><%= sortable "invoice_amount", "Invoice Amount" %></th>
+      <th><%= sortable "gross_invoice_amount", "Gross Invoice Amount" %></th>
       <th><%= sortable "supplier_email", "Offer Sent to" %></th>
       <th><%= sortable "status", "Offer Status" %></th> 
       <th><%= sortable "offer_sent_date", "Offer Sent Date" %></th>
@@ -92,7 +92,7 @@
         <th class="middle thin"><%= date(pin.invoice_date) %></th>
         <th class="middle thin"><%= date(pin.due_date) %></th>
         <!-- <th class="middle"><%#= pin.invoice_curr %></th> -->
-        <th class="right currency2"><%= currency(pin.invoice_amount) %></th>
+        <th class="right currency2"><%= currency(pin.gross_invoice_amount) %></th>
         <th class="left"><%= pin.supplier_email %></th>
         <th class="middle"><%= pin.status %></th>
         <th class="middle thin"><%= date(pin.offer_sent_date) %></th>
