--- a/app/views/pins/all_invoices.html.erb
+++ b/app/views/pins/all_invoices.html.erb
@@ -46,7 +46,7 @@
         <th class="middle"><%= pin.suppler_ref %></th>
         <th class="middle"><%= pin.suppler_name %></th>
         <th class="middle"><%= pin.invoice_number %></th>
-        <th class="left"  ><%= pin.description %></th>
+        <th class="middle"><%= pin.description %></th>
         <th class="middle"><%= date(pin.invoice_date) %></th>
         <th class="middle"><%= date(pin.due_date) %></th>
         <th class="middle"><%= pin.invoice_curr %></th>
