--- a/app/views/pins/acceptedoffersadmin.html.erb
+++ b/app/views/pins/acceptedoffersadmin.html.erb
@@ -37,7 +37,7 @@
         <!-- <th class="middle thiner"><%#= pin.suppler_ref %></th> -->
         <th class="middle"><%= pin.suppler_name %></th>
         <th class="middle"><%= pin.invoice_number %></th>
-        <th class="left"><%= pin.description %></th>
+        <th class="middle"><%= pin.description %></th>
         <th class="middle thin"><%= date(pin.invoice_date) %></th>
         <th class="middle thin"><%= date(pin.due_date) %></th>
         <!-- <th class="middle"><%#= pin.invoice_curr %></th> -->
@@ -88,7 +88,7 @@
         <!-- <th class="middle"><%#= pin.suppler_ref %></th> -->
         <th class="middle"><%= pin.suppler_name %></th>
         <th class="middle"><%= pin.invoice_number %></th>
-        <th class="left"><%= pin.description %></th>
+        <th class="middle"><%= pin.description %></th>
         <th class="middle thin"><%= date(pin.invoice_date) %></th>
         <th class="middle thin"><%= date(pin.due_date) %></th>
         <!-- <th class="middle"><%#= pin.invoice_curr %></th> -->
