--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -47,7 +47,7 @@
         <!-- <th class="middle"><%#= pin.suppler_ref %></th> -->
         <th class="middle"><%= pin.suppler_name %></th>
         <th class="middle"><%= pin.invoice_number %></th>
-        <th class="left"  ><%= pin.description %></th>
+        <th class="middle"><%= pin.description %></th>
         <th class="middle date"><%= date(pin.invoice_date) %></th>
         <th class="middle date"><%= date(pin.due_date) %></th>
         <!-- <th class="middle"><%#= pin.invoice_curr %></th> -->
