--- a/app/views/pins/pendingoffers.html.erb
+++ b/app/views/pins/pendingoffers.html.erb
@@ -33,7 +33,7 @@
       <tr>
         <th class="middle"><%= pin.suppler_name %></th>
         <th class="middle"><%= pin.invoice_number %></th>
-        <th class="left"  ><%= pin.description %></th>
+        <th class="middle"><%= pin.description %></th>
         <th class="middle date"><%= date(pin.invoice_date) %></th>
         <th class="middle date"><%= date(pin.due_date) %></th>
         <!-- <th class="middle"><%#= pin.invoice_curr %></th> -->
