--- a/app/views/offer_mailer/offers_email.html.erb
+++ b/app/views/offer_mailer/offers_email.html.erb
@@ -15,7 +15,7 @@
          #invoiceTable {margin:0; padding:0; width:100% !important; line-height: 100% !important;}
          table td {border-collapse: collapse;}
          table { border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt; }
-         a {color: #F6F5F1; text-decoration: underline !important;}
+         a {color: black; text-decoration: underline !important;}
          /*STYLES*/
          table[class=full] { width: 100%; clear: both; }
          .invoicetable thead tr th {
@@ -57,7 +57,7 @@
          a[href^="tel"], a[href^="sms"] {
          text-decoration: underline; 
          pointer-events: none;
-         color: #F6F5F1;
+         color: black;
          cursor: default;
          }
          .mobile_link a[href^="tel"], .mobile_link a[href^="sms"] {
@@ -77,13 +77,13 @@
          a[href^="tel"], a[href^="sms"] {
          text-decoration: underline;
          pointer-events: none;
-         color: #F6F5F1;
+         color: black;
          cursor: default;
          }
          .mobile_link a[href^="tel"], .mobile_link a[href^="sms"] {
          text-decoration: underline !important; 
          pointer-events: auto;
-         color: #F6F5F1;
+         color: black;
          cursor: default;
          }
          table[class=devicewidth] {width: 280px!important;text-align:center!important;}
@@ -440,7 +440,7 @@
                               <!-- Spacing -->
                               <tr>
                                  <td align="center" valign="middle" style="font-size: 12px; color: #F6F5F1; line-height: 17px; padding: 10px;">
-                                    Your contact details have been provided to the Invoicely team by Fat Face. If any your details are incorrect or if you no longer want to receive these offers please get in touch at <a href="mailto:fatface.offers@invoicely.co.uk" target="_top">fatface.offers@invoicely.co.uk</a>.
+                                    Your contact details have been provided to the Invoicely team by Fat Face. If any your details are incorrect or if you no longer want to receive these offers please get in touch at <a href="mailto:fatface.offers@invoicely.co.uk" target="_top" style="color: #F6F5F1">fatface.offers@invoicely.co.uk</a>.
                                  </td>
                               </tr>
                               <!-- Spacing -->
