--- a/app/views/pages/FAQS.html.erb
+++ b/app/views/pages/FAQS.html.erb
@@ -112,7 +112,7 @@
             </div>
             <div id="collapseTwo" class="panel-collapse collapse">
                 <div class="panel-body">
-                    Accepting or rejecting offers is easy. Simply choose <i>Accept</i> or <i>Reject</i>&nbsp; next to the appropriate invoice and click Submit once finished. Alternatively you can choose to accept or reject all offers by using the green or red <i>Mark All</i>&nbsp; buttons.
+                    Accepting or rejecting offers is easy. Simply choose <i>Accept</i> or <i>Reject</i>&nbsp; next to the appropriate invoice and click <i>Submit</i> once finished. Alternatively you can choose to accept or reject all offers by using the green or red <i>Mark All</i>&nbsp; buttons.
                 </div>
             </div>
         </div>
@@ -124,7 +124,7 @@
             </div>
             <div id="collapseThree" class="panel-collapse collapse">
                 <div class="panel-body">
-                    The column labelled Proposed Settlement Date details the new payment date offered by your customer. If you accept the early payment offer, payment will be processed on this date. If you reject the early payment offer, there will be no change to the agreed settlement date.
+                    The column labelled <i>Proposed Settlement Date</i> details the new payment date offered by your customer. If you accept the early payment offer, payment will be processed on this date. If you reject the early payment offer, there will be no change to the agreed settlement date.
                 </div>
             </div>
         </div>
@@ -136,7 +136,7 @@
             </div>
             <div id="collapseFive" class="panel-collapse collapse">
                 <div class="panel-body">
-                    Within your dashboard, the tab called Previous Offers displays all of your past offers. This includes offers that you have accepted, rejected or have expired without action. You will also receive confirmation by email summarising all your reponses. 
+                    Within your dashboard, the tab called <i>Previous Offers</i> displays all of your past offers. This includes offers that you have accepted, rejected or have expired without action. You will also receive confirmation by email summarising all your reponses. 
                 </div>
             </div>
         </div>
