--- a/app/views/offer_mailer/response_email.html.erb
+++ b/app/views/offer_mailer/response_email.html.erb
@@ -345,7 +345,7 @@
                                           <!-- Title -->
                                           <tr>
                                              <td style="font-size: 16px; color: #333333; text-align:left;line-height: 24px;">
-                                                You can login to the Invoicely supplier portal using the button below any point to keep track of your offer history.
+                                                You can login to the Invoicely supplier portal using the button below at any point to keep track of your offer history.
                                              </td>
                                           </tr>
                                           <!-- End of Title -->
