--- a/app/views/pins/pendingoffers.html.erb
+++ b/app/views/pins/pendingoffers.html.erb
@@ -1,65 +1,65 @@
+<% if current_user.id == 20 %>
+  <div class="center">
+    <%= render 'layouts/dashboardpages' %>
+  </div>
 
-<div class="center">
-  <%= render 'layouts/dashboardpages' %>
-</div>
-
-<br><br>
+  <br><br>
 
 
-<br><br>
+  <br><br>
 
-<table class="table table-hover table-bordered table-striped invtable">
-  <thead>
-    <tr>
-      <th><%= sortable "suppler_name", "Supplier Name" %></th>
-      <th><%= sortable "invoice_number", "Invoice Number" %></th>
-      <th><%= sortable "description", "Fat Face Ref" %></th>
-      <th><%= sortable "invoice_date", "Invoice Date" %></th>
-      <th><%= sortable "due_date", "Due Date" %></th>
-      <!-- <th><%#= sortable "invoice_curr", "Invoice Currency" %></th> -->
-      <th><%= sortable "gross_invoice_amount", "Gross Invoice Amount" %></th>
-      <th><%= sortable "status", "Offer Status" %></th>
-      <th><%= sortable "supplier_email", "Offer Sent to" %></th>
-      <th><%= sortable "offer_sent_date", "Offer Sent Date" %></th>
-      <th><%= sortable "prop_settlement_date", "Proposed Settlement Date" %></th>
-      <th><%= sortable "offer_amount", "Offer Amount" %></th>
-      <!-- <th><%#= sortable "saving", "Potential Saving" %></th> -->
-      <th><%= sortable "offer_expirey_date", "Offer Expiry Date" %></th>
-      <th>Action</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @pins.each do |pin| %>
+  <table class="table table-hover table-bordered table-striped invtable">
+    <thead>
       <tr>
-        <th class="middle"><%= pin.suppler_name %></th>
-        <th class="middle"><%= pin.invoice_number %></th>
-        <th class="middle"><%= pin.description %></th>
-        <th class="middle date"><%= date(pin.invoice_date) %></th>
-        <th class="middle date"><%= date(pin.due_date) %></th>
-        <!-- <th class="middle"><%#= pin.invoice_curr %></th> -->
-        <th class="right" ><%= currency(pin.gross_invoice_amount) %></th>
-        <th class="middle"><%= pin.status %></th>
-        <th class="middle"><%= pin.supplier_email %></th>
-        <th class="middle date"><%= date(pin.offer_sent_date) %></th>
-        <th class="middle date"><%= date(pin.prop_settlement_date) %></th>
-        <th class="right" ><%= currency(pin.offer_amount) %></th>
-        <!-- <th class="right" ><%#= currency(pin.saving) %></th> -->
-        <th class="middle date"><%= date(pin.offer_expirey_date) %></th>
-        <th class='middle'><%= link_to '<i class="glyphicon glyphicon-share"></i> Expire'.html_safe, {:controller => "pins", :action => "expireInvoice", :pin => pin.id }%></th>
+        <th><%= sortable "suppler_name", "Supplier Name" %></th>
+        <th><%= sortable "invoice_number", "Invoice Number" %></th>
+        <th><%= sortable "description", "Fat Face Ref" %></th>
+        <th><%= sortable "invoice_date", "Invoice Date" %></th>
+        <th><%= sortable "due_date", "Due Date" %></th>
+        <!-- <th><%#= sortable "invoice_curr", "Invoice Currency" %></th> -->
+        <th><%= sortable "gross_invoice_amount", "Gross Invoice Amount" %></th>
+        <th><%= sortable "status", "Offer Status" %></th>
+        <th><%= sortable "supplier_email", "Offer Sent to" %></th>
+        <th><%= sortable "offer_sent_date", "Offer Sent Date" %></th>
+        <th><%= sortable "prop_settlement_date", "Proposed Settlement Date" %></th>
+        <th><%= sortable "offer_amount", "Offer Amount" %></th>
+        <!-- <th><%#= sortable "saving", "Potential Saving" %></th> -->
+        <th><%= sortable "offer_expirey_date", "Offer Expiry Date" %></th>
+        <th>Action</th>
       </tr>
-    <% end %>  
-  </tbody>
-</table>
-<div class="center">
-   <%= will_paginate @pins, renderer: BootstrapPagination::Rails %>
-</div>
+    </thead>
+    <tbody>
+      <% @pins.each do |pin| %>
+        <tr>
+          <th class="middle"><%= pin.suppler_name %></th>
+          <th class="middle"><%= pin.invoice_number %></th>
+          <th class="middle"><%= pin.description %></th>
+          <th class="middle date"><%= date(pin.invoice_date) %></th>
+          <th class="middle date"><%= date(pin.due_date) %></th>
+          <!-- <th class="middle"><%#= pin.invoice_curr %></th> -->
+          <th class="right" ><%= currency(pin.gross_invoice_amount) %></th>
+          <th class="middle"><%= pin.status %></th>
+          <th class="middle"><%= pin.supplier_email %></th>
+          <th class="middle date"><%= date(pin.offer_sent_date) %></th>
+          <th class="middle date"><%= date(pin.prop_settlement_date) %></th>
+          <th class="right" ><%= currency(pin.offer_amount) %></th>
+          <!-- <th class="right" ><%#= currency(pin.saving) %></th> -->
+          <th class="middle date"><%= date(pin.offer_expirey_date) %></th>
+          <th class='middle'><%= link_to '<i class="glyphicon glyphicon-share"></i> Expire'.html_safe, {:controller => "pins", :action => "expireInvoice", :pin => pin.id }%></th>
+        </tr>
+      <% end %>  
+    </tbody>
+  </table>
+  <div class="center">
+     <%= will_paginate @pins, renderer: BootstrapPagination::Rails %>
+  </div>
 
-<br><br>
-<p><%= link_to "Expire ALL Pending Offers", :action => "ExpireAllPendingOffers" %></p>
-<br>
-<p><%= link_to "Expire Pending Offers Past Expiry Date", :action => "ExpireOffersPastExpireDate" %></p>
+  <br><br>
+  <p><%= link_to "Expire ALL Pending Offers", :action => "ExpireAllPendingOffers" %></p>
+  <br>
+  <p><%= link_to "Expire Pending Offers Past Expiry Date", :action => "ExpireOffersPastExpireDate" %></p>
 
-
+<% end %>
 
 
 <br><br>
