--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -33,8 +33,11 @@
           <th class="middle"><%= fulldate(user.last_sign_in_at) %></th>
           <th class="middle"><%= fulldate(user.created_at) %></th>
           <th class="middle"><%= fulldate(user.updated_at) %></th>
-  <!--         <th class="middle"><%#= link_to edit_user_registration_path(user) do %><span class="glyphicon glyphicon-pencil"></span> Edit<%# end %></th> -->
-          <th class="middle"><%= link_to '<i class="glyphicon glyphicon-trash"></i> Delete'.html_safe, admin_destroy_user_path(user), method: :delete, data: { confirm: "You sure?" } %></th>
+          <% if user.id == 20 %>
+            <th class="middle"> <b>Admin</b> </th>
+          <% else %>
+            <th class="middle"><%= link_to '<i class="glyphicon glyphicon-trash"></i> Delete'.html_safe, admin_destroy_user_path(user), method: :delete, data: { confirm: "You sure?" } %></th>
+          <% end %>
         </tr>
       <% end %>  
     </tbody>
