--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -4,7 +4,7 @@
   </div>
 
   <br><br><br><br>
-
+  test
   <table class="table table-hover table-bordered table-striped invtable">
     <thead>
       <tr>
